worked on sticky-header & Employee Hierarchy

--- a/src/app/billpay/purchase-order-list/purchase-order-list.component.scss
+++ b/src/app/billpay/purchase-order-list/purchase-order-list.component.scss
@@ -135,9 +135,8 @@
   }
   
   .purchase-order-table-style {
-    width: 100%;
-    overflow: auto;
-    display: block;
+     max-height: 78vh; /* Or any height you want */
+  overflow: auto;
   }
   
   .mdc-data-table__cell,
