--- a/src/app/billpay/receipt-list/receipt-list.component.scss
+++ b/src/app/billpay/receipt-list/receipt-list.component.scss
@@ -268,3 +268,7 @@
   table {
     width: 100%;
   }
+  .purchase-order-table-style{
+      max-height: 78vh; /* Or any height you want */
+  overflow: auto;
+  }
