--- a/src/app/dialogs/alert-popup/alert-popup.component.scss
+++ b/src/app/dialogs/alert-popup/alert-popup.component.scss
@@ -124,3 +124,7 @@
   // font-weight: bold;
   border-bottom: 1px solid #ccc;
 }
+.hot-list-table-style{
+  max-height: 78vh; /* Or any height you want */
+  overflow: auto;
+}
