--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.scss
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.scss
@@ -38,7 +38,7 @@
   
   .table-wrapper {
     flex: 1;
-    overflow: auto;
+        margin-bottom: -12px;
   }
   
   table {
@@ -116,11 +116,8 @@
   }
   
   .hot-list-table-style {
-    // padding: 0 2px;
-    width: 100%;
-    // max-height: calc(100% - 3px);
-    overflow: auto;
-    display: block;
+     max-height: 78vh; /* Or any height you want */
+  overflow: auto;
   }
   
   .mdc-data-table__cell,
