--- a/src/app/usit/components/masters/visa-list/visa-list.component.html
+++ b/src/app/usit/components/masters/visa-list/visa-list.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="table-wrapper">
-    <section class="table-style mat-elevation-z8">
+    <section class="table-style mat-elevation-z8" class="vendor-table-style">
       <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)">
 
         <!--- Note that these columns can be defined in any order.
