--- a/src/app/usit/components/masters/visa-list/visa-list.component.scss
+++ b/src/app/usit/components/masters/visa-list/visa-list.component.scss
@@ -170,3 +170,7 @@ ul.breadcrumb li a:hover {
   overflow: auto;
   display: block;
 }
+.vendor-table-style {
+  max-height: 78vh; /* Or any height you want */
+  overflow: auto;
+}
