--- a/src/app/usit/components/openreqs-job-applications/openreqs-job-applications.component.scss
+++ b/src/app/usit/components/openreqs-job-applications/openreqs-job-applications.component.scss
@@ -120,9 +120,8 @@
   }
   
   .hot-list-table-style {
-    width: 100%;
-    overflow: auto;
-    display: block;
+     max-height: 78vh; /* Or any height you want */
+  overflow: auto;
   }
   
   .mdc-data-table__cell,
