--- a/src/app/usit/components/people/active/active.component.scss
+++ b/src/app/usit/components/people/active/active.component.scss
@@ -120,9 +120,8 @@ tbody {
 }
 
 .interview-table-style {
-  width: 100%;
+ max-height: 78vh; /* Or any height you want */
   overflow: auto;
-  display: block;
 }
 
 .mdc-data-table__cell,
