--- a/src/app/usit/components/quiz/quiz-list/quiz-list.component.html
+++ b/src/app/usit/components/quiz/quiz-list/quiz-list.component.html
@@ -20,7 +20,7 @@
 </div>
 </div>
 <div class="table-wrapper">
-  <section class="kpt-table-style mat-elevation-z8">
+  <section class="kpt-table-style mat-elevation-z8" class="vendor-table-style ">
 
     <table mat-table [dataSource]="dataSource" matSort  (matSortChange)="onSort($event)">
 
