--- a/src/app/usit/components/quiz/quiz-result/quiz-result.component.html
+++ b/src/app/usit/components/quiz/quiz-result/quiz-result.component.html
@@ -18,7 +18,7 @@
 </div>
 </div>
 <div class="table-wrapper">
-  <section class="kpt-table-style mat-elevation-z0">
+  <section class="kpt-table-style mat-elevation-z0" class="vendor-table-style">
 
     <table mat-table [dataSource]="dataSource" matSort  (matSortChange)="onSort($event)">
 
