--- a/src/app/usit/components/reports/Executive-Rating/executive-ratings/executive-ratings.component.scss
+++ b/src/app/usit/components/reports/Executive-Rating/executive-ratings/executive-ratings.component.scss
@@ -127,11 +127,8 @@
   }
   
   .interview-table-style {
-    // padding: 0 2px;
-    width: 100%;
-    // max-height: calc(100% - 3px);
-    overflow: auto;
-    display: block;
+   max-height: 78vh; /* Or any height you want */
+  overflow: auto;
   }
   
   .mdc-data-table__cell,
