--- a/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.html
+++ b/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.html
@@ -83,7 +83,7 @@
       <mat-card class="matcards ">
         <mat-card-content>
           <div id="table-container" class="table-wrapper">
-            <section>
+            <section class="vendor-table-style ">
               <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
 
                 <!--- Note that these columns can be defined in any order.
