--- a/src/app/usit/components/sales/closure-list/closure-list.component.scss
+++ b/src/app/usit/components/sales/closure-list/closure-list.component.scss
@@ -136,11 +136,8 @@
   }
   
   .closure-table-style {
-    // padding: 0 2px;
-    width: max-content;
-    // max-height: calc(100% - 3px);
-    overflow: auto;
-    display: block;
+     max-height: 78vh; /* Or any height you want */
+  overflow: auto;
   }
   
   .mdc-data-table__cell,
