--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.scss
@@ -114,11 +114,8 @@ tbody {
 }
 
 .hot-list-table-style {
-  // padding: 0 2px;
-  width: 100%;
-  // max-height: calc(100% - 3px);
+    max-height: 78vh; /* Or any height you want */
   overflow: auto;
-  display: block;
 }
 
 .mdc-data-table__cell,
