--- a/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
@@ -38,8 +38,7 @@
   
   .table-wrapper {
     flex: 1;
-    overflow-y: auto;
-    overflow-x: hidden;
+
     // padding: 4px;
     margin: 4px;
   }
@@ -172,12 +171,8 @@
   }
   
   .vendor-table-style {
-    padding: 0 2px;
-    // width: max-content;
-    width: 100%;
-    // max-height: calc(100% - 2px);
-    overflow: auto;
-    display: block;
+    max-height: 78vh; /* Or any height you want */
+  overflow: auto;
   }
   
   .mdc-data-table__cell,
