--- a/src/app/usit/components/vendor-management/known-vendor-contacts/known-vendor-contacts.component.scss
+++ b/src/app/usit/components/vendor-management/known-vendor-contacts/known-vendor-contacts.component.scss
@@ -169,12 +169,8 @@
   }
   
   .vendor-table-style {
-    padding: 0 2px;
-    // width: max-content;
-    width: 100%;
-    // max-height: calc(100% - 2px);
-    overflow: auto;
-    display: block;
+    max-height: 78vh; /* Or any height you want */
+  overflow: auto;
   }
   
   .mdc-data-table__cell,
