--- a/src/app/billpay/invoice-list/invoice-list.component.scss
+++ b/src/app/billpay/invoice-list/invoice-list.component.scss
@@ -98,9 +98,8 @@ tbody {
 }
 
 .purchase-order-table-style {
-  width: 100%;
+   max-height: 78vh; /* Or any height you want */
   overflow: auto;
-  display: block;
 }
 
 .mdc-data-table__cell,
