--- a/src/app/usit/components/employee-list/employee-list.component.scss
+++ b/src/app/usit/components/employee-list/employee-list.component.scss
@@ -39,9 +39,9 @@ ul.breadcrumb li a:hover {
 .table-wrapper{
   flex: 1;
   // padding: 4px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  margin: 4px;
+
+  margin-bottom:-40px
+
 }
 table {
   width: 100%;
@@ -122,6 +122,7 @@ td:nth-child(2) {
 .header-text{
  padding-left: 8px;
  font-weight: 600 ;
+ padding-bottom: 8px;
 }
 .add-user{
   cursor: pointer;
@@ -140,12 +141,8 @@ td:nth-child(2) {
 }
 
 .table-style {
-  width: 100%;
-  // max-height: 61vh;
-  // max-height: calc(100% - 52px);
-  // padding: 0 2px;
+  max-height: 73vh; /* Or any height you want */
   overflow: auto;
-  display: block;
 }
 
 .action-btns{
@@ -264,4 +261,11 @@ ul.breadcrumb li:last-child {
 ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
   width: 24px !important;
   height: 24px !important;
+}
+.item-account {
+      font-size: 22px;
+    position: relative;
+    top: 8px;
+    left: 12px;
+    color: #3f51b5;
 }
