--- a/src/app/usit/components/quiz/quiz-result/quiz-result.component.scss
+++ b/src/app/usit/components/quiz/quiz-result/quiz-result.component.scss
@@ -168,3 +168,7 @@ ul.breadcrumb li a:hover {
   overflow: auto;
   display: block;
 }
+.vendor-table-style {
+  max-height: 78vh; /* Or any height you want */
+  overflow: auto;
+}
