--- a/src/app/usit/components/reports/banter-report/banter-report.component.html
+++ b/src/app/usit/components/reports/banter-report/banter-report.component.html
@@ -102,7 +102,7 @@
       <mat-card>
         <mat-card-content>
           <div class="table-wrapper">
-            <section>
+            <section class="vendor-table-style">
               <table
                 mat-table
                 [dataSource]="dataSource"
