--- a/src/app/usit/components/reports/candidate-report/candidate-report.component.html
+++ b/src/app/usit/components/reports/candidate-report/candidate-report.component.html
@@ -62,7 +62,7 @@
         <mat-card>
           <mat-card-content>
             <div class="table-wrapper">
-              <section>
+              <section class="vendor-table-style">
                 <table
                   mat-table
                   [dataSource]="dataSource"
