--- a/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.scss
+++ b/src/app/usit/components/reports/open-requirements-reports/open-requirements-reports.component.scss
@@ -454,3 +454,7 @@ ul.breadcrumb li:last-child {
   display: none !important;
 }
 
+.vendor-table-style {
+  max-height: 78vh; /* Or any height you want */
+  overflow: auto;
+}
