--- a/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.html
+++ b/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.html
@@ -66,7 +66,7 @@
         <mat-card>
         <mat-card-content>
             <div class="table-wrapper"> 
-  <section>
+  <section class="vendor-table-style">
     <table
     mat-table
     [dataSource]="dataSource"
