--- a/src/app/usit/components/sales/submission-list/submission-list.component.scss
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.scss
@@ -50,6 +50,12 @@ table {
   width: 100%;
 
 }
+thead.mat-header-row {
+  position: sticky !important;
+  top: 0 !important;
+  z-index: 2 !important;
+  background-color: rgb(213, 231, 231) !important;
+}
 
 
 
@@ -117,7 +123,7 @@ tbody {
   align-items: center;
   justify-content: space-between;
 
-  height: 48px;
+  height: 16px;
 padding: 15px;
   background-color: white;
   // position: sticky;
@@ -164,7 +170,10 @@ padding: 15px;
 // .mat-mdc-header-row {
 //   z-index: 1000;
 // }
-
+.vendor-table-style {
+  max-height: 80vh; /* Or any height you want */
+  overflow: auto;
+}
 .no-data-found {
   display: flex;
   align-items: center;
