--- a/src/app/usit/components/vendor-management/client-information/client-information.component.scss
+++ b/src/app/usit/components/vendor-management/client-information/client-information.component.scss
@@ -144,10 +144,8 @@ tbody {
 }
 
 .tcvr-table-style {
-  padding: 0 2px;
-  width: 100%;
+    max-height: 78vh; /* Or any height you want */
   overflow: auto;
-  display: block;
 }
 
 .mdc-data-table__cell,
