--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
@@ -37,26 +37,16 @@ ul.breadcrumb li a:hover {
 
 .table-wrapper {
   flex: 1;
-  overflow-y: auto;
-  overflow-x: hidden;
-  margin: 4px;
-}
+
+    margin: -3px;}
 
 table {
   width: 100%;
 
 }
 
-.mat-mdc-header-row {
-  background-color: rgb(213, 231, 231);
-  position: sticky;
-  top: 0;
-}
 
-thead {
-  position: sticky;
-  top: 0;
-}
+
 
 tbody {
   text-align: left;
@@ -86,21 +76,7 @@ tbody {
   width: fit-content !important;
 }
 
-.mat-column-SerialNum,
-.mat-column-Company,
-.mat-column-HeadQuarter,
-.mat-column-Fed-Id,
-.mat-column-Fed-Id,
-.mat-column-VendorType,
-.mat-column-TierType,
-.mat-column-AddedBy,
-.mat-column-AddedOn,
-.mat-column-LastUpdated,
-.mat-column-Action,
-.mat-column-Status,
-.mat-column-ApproveOrReject {
-  border-right: 1px solid lightgray !important;
-}
+
 
 .company-recruiter-info {
   cursor: pointer !important;
@@ -151,19 +127,9 @@ tbody {
 }
 
 .vendor-table-style {
-  width: 100%;
-  overflow-y: auto;
+  max-height: 80vh; /* Or any height you want */
+  overflow: auto;
 }
-
-.mdc-data-table__cell,
-.mdc-data-table__header-cell {
-  padding: 0 4px 0 4px;
-}
-
-.mat-mdc-header-row {
-  z-index: 1000;
-}
-
 .no-data-found {
   display: flex;
   align-items: center;
@@ -172,27 +138,6 @@ tbody {
   margin-top: 64px;
 }
 
-.responsive-table {
-  width: 100%;
-}
-
-@media screen and (max-width: 768px) {
-  .responsive-table {
-    table-layout: auto;
-  }
-
-  .mdc-data-table__cell,
-  .mdc-data-table__header-cell {
-    padding: 0px 2px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .mdc-data-table__cell,
-  .mdc-data-table__header-cell {
-    padding: 0px 2px;
-  }
-}
 
 .action-buttons {
   display: flex;
@@ -228,13 +173,6 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   align-items: center;
 }
 
-.mat-mdc-header-row {
-  height: 30px !important;
-}
-
-.mat-mdc-row {
-  height: 30px !important;
-}
 
 .filter-button {
   width: fit-content;
@@ -315,4 +253,21 @@ ul.breadcrumb li:last-child {
 ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
   width: 24px !important;
   height: 24px !important;
+}
+
+
+.mat-mdc-header-row {
+ 
+  background: rgb(213, 231, 231);
+
+
+  /* Keep the original styles */
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  height: var(--mat-table-header-container-height, 56px);
+  color: var(--mat-table-header-headline-color, rgba(0, 0, 0, 0.87));
+  font-family: var(--mat-table-header-headline-font, Roboto, sans-serif);
+  line-height: var(--mat-table-header-headline-line-height);
+  font-size: var(--mat-table-header-headline-size, 14px);
+  font-weight: var(--mat-table-header-headline-weight, 500);
 }
