dashboad and emplyoee bug fixes

--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -302,7 +302,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="subCount('daily','Today')">Today</button>
+                  <button mat-menu-item (click)="subCount('daily','daily')">Today</button>
                   <button mat-menu-item (click)="subCount('weekly','Weekly')">Weekly</button>
                   <button mat-menu-item (click)="subCount('monthly', 'Monthly')">Monthly</button>
                   <button mat-menu-item (click)="subCount('YearToDate', 'Yearly')">YTD</button>
@@ -405,7 +405,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menuSub="matMenu">
-                  <button mat-menu-item (click)="subCountInd('daily','Today')">Today </button>
+                  <button mat-menu-item (click)="subCountInd('daily','daily')">Today </button>
                   <button mat-menu-item (click)="subCountInd('weekly','Weekly')">Weekly </button>
                   <button mat-menu-item (click)="subCountInd('monthly', 'Monthly')">Monthly </button>
                   <button mat-menu-item (click)="subCountInd('YearToDate', 'Yearly')">YTD </button>
@@ -668,7 +668,7 @@
                 <mat-icon>more_horiz</mat-icon>
               </button>
               <mat-menu #menuSub="matMenu">
-                <button mat-menu-item (click)="sourcingCount('daily','Today')">Today </button>
+                <button mat-menu-item (click)="sourcingCount('daily','daily')">Today </button>
                 <button mat-menu-item (click)="sourcingCount('weekly','Weekly')">Weekly </button>
                 <button mat-menu-item (click)="sourcingCount('monthly', 'Monthly')">Monthly </button>
                 <button mat-menu-item (click)="sourcingCount('YearToDate', 'Yearly')">YTD </button>
@@ -1048,7 +1048,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="subCount('daily','Today')">Today</button>
+                  <button mat-menu-item (click)="subCount('daily','daily')">Today</button>
                   <button mat-menu-item (click)="subCount('weekly','Weekly')">Weekly</button>
                   <button mat-menu-item (click)="subCount('monthly', 'Monthly')">Monthly</button>
                   <button mat-menu-item (click)="subCount('YearToDate', 'Yearly')">YTD</button>
@@ -1149,7 +1149,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menuSub="matMenu">
-                  <button mat-menu-item (click)="subCountInd('daily','Today')">Today </button>
+                  <button mat-menu-item (click)="subCountInd('daily','daily')">Today </button>
                   <button mat-menu-item (click)="subCountInd('weekly','Weekly')">Weekly </button>
                   <button mat-menu-item (click)="subCountInd('monthly', 'Monthly')">Monthly </button>
                   <button mat-menu-item (click)="subCountInd('YearToDate', 'Yearly')">YTD </button>
@@ -1514,7 +1514,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="subCount('daily','Today')">Today</button>
+                  <button mat-menu-item (click)="subCount('daily','daily')">Today</button>
                   <button mat-menu-item (click)="subCount('weekly','Weekly')">Weekly</button>
                   <button mat-menu-item (click)="subCount('monthly', 'Monthly')">Monthly</button>
                   <button mat-menu-item (click)="subCount('YearToDate', 'Yearly')">YTD</button>
@@ -1617,7 +1617,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menuSub="matMenu">
-                  <button mat-menu-item (click)="subCountInd('daily','Today')">Today </button>
+                  <button mat-menu-item (click)="subCountInd('daily','daily')">Today </button>
                   <button mat-menu-item (click)="subCountInd('weekly','Weekly')">Weekly </button>
                   <button mat-menu-item (click)="subCountInd('monthly', 'Monthly')">Monthly </button>
                   <button mat-menu-item (click)="subCountInd('YearToDate', 'Yearly')">YTD </button>
@@ -1954,7 +1954,7 @@
                 <mat-icon>more_horiz</mat-icon>
               </button>
               <mat-menu #menuSub="matMenu">
-                <button mat-menu-item (click)="sourcingCount('daily','Today')">Today </button>
+                <button mat-menu-item (click)="sourcingCount('daily','daily')">Today </button>
                 <button mat-menu-item (click)="sourcingCount('weekly','Weekly')">Weekly </button>
                 <button mat-menu-item (click)="sourcingCount('monthly', 'Monthly')">Monthly </button>
                 <button mat-menu-item (click)="sourcingCount('YearToDate', 'Yearly')">YTD </button>
@@ -2479,7 +2479,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="subCount('daily','Today')">Today</button>
+                  <button mat-menu-item (click)="subCount('daily','Daily')">Today</button>
                   <button mat-menu-item (click)="subCount('weekly','Weekly')">Weekly</button>
                   <button mat-menu-item (click)="subCount('monthly', 'Monthly')">Monthly</button>
                   <button mat-menu-item (click)="subCount('YearToDate', 'Yearly')">YTD</button>
@@ -2582,7 +2582,7 @@
                   <mat-icon>more_horiz</mat-icon>
                 </button>
                 <mat-menu #menuSub="matMenu">
-                  <button mat-menu-item (click)="subCountInd('daily','Today')">Today </button>
+                  <button mat-menu-item (click)="subCountInd('daily','Daily')">Today </button>
                   <button mat-menu-item (click)="subCountInd('weekly','Weekly')">Weekly </button>
                   <button mat-menu-item (click)="subCountInd('monthly', 'Monthly')">Monthly </button>
                   <button mat-menu-item (click)="subCountInd('YearToDate', 'Yearly')">YTD </button>
