--- a/src/app/usit/components/employee-list/employee-list.component.scss
+++ b/src/app/usit/components/employee-list/employee-list.component.scss
@@ -115,7 +115,7 @@ td:nth-child(2) {
   // position: sticky;
   // z-index: 9999999;
   top: 0;
-  overflow: hidden;
+  // overflow: hidden;
   margin: 4px;
   background-color: rgb(228, 231, 234);
 }
