--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.scss
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.scss
@@ -91,7 +91,7 @@
     height: 48px;
     background-color: white;
     top: 0;
-    overflow: hidden;
+    // overflow: hidden;
     margin: 4px;
     background-color: rgb(228, 231, 234);
   }
