--- a/src/app/usit/components/openreqs/resume-uploader/resume-uploader.component.scss
+++ b/src/app/usit/components/openreqs/resume-uploader/resume-uploader.component.scss
@@ -337,4 +337,7 @@
     background-color: green !important;
     color: white !important;
   }
-  
+  .interview-table-style{
+     max-height: 78vh; /* Or any height you want */
+  overflow: auto;
+  }
