--- a/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.scss
+++ b/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.scss
@@ -101,7 +101,7 @@ tbody {
   height: 48px;
   background-color: white;
   top: 0;
-  overflow: hidden;
+  // overflow: hidden;
   margin: 4px 0;
   background-color: rgb(228, 231, 234);
 }
