--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
@@ -96,7 +96,7 @@ tbody {
   height: 48px;
   background-color: white;
   top: 0;
-  overflow: hidden;
+  // overflow: hidden;
   background-color: rgb(228, 231, 234);
 }
 
