--- a/src/app/usit/components/email-extraction/email-extraction.component.scss
+++ b/src/app/usit/components/email-extraction/email-extraction.component.scss
@@ -124,9 +124,8 @@ tbody {
 }
 
 .hot-list-table-style {
-  width: 100%;
+  max-height: 78vh; /* Or any height you want */
   overflow: auto;
-  display: block;
 }
 
 .mdc-data-table__cell,
