--- a/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
@@ -140,7 +140,7 @@
     // position: sticky;
     // z-index: 9999999;
     top: 0;
-    overflow: hidden;
+    // overflow: hidden;
     margin: 4px;
     background-color: rgb(228, 231, 234);
   }
